# picross_solver

./: Cargo.toml
benches/: solve_bench.rs
src/: clues.rs  display.rs  image.rs  lib.rs  main.rs  picross.rs  solver.rs
src/clues/: clue_board.rs  clue_format_parser.rs
src/display/: display_clue.rs  display_context.rs  display_image.rs  display_picross.rs  display_picross_line_unit.rs  display_row_col_picross.rs  displayable.rs
src/image/: image_board.rs  image_line.rs
src/picross/: picross_board.rs  picross_line_unit.rs  picross_samples.rs
src/solver/: clue_index_range.rs  invalidator.rs  one_line_solver.rs  row_col_picross_solver.rs  solvable.rs  validator.rs
tests/: display_test.rs  solve_test.rs
