[package]
name = "picross_solver"
version = "0.1.0"
authors = ["Boris Raymond <boris.raymond.4489@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
crossterm = "0.18"
serial_test = "0.5.1"
getopts = "0.2"
criterion = "0.3.5"

[[bench]]
name = "solve_bench"
harness = false